@@ -1085,7 +1085,7 @@
         <parameter name="aStartDate"/>
         <parameter name="aEndDate"/>
         <body><![CDATA[
-          this.mStartDate = getWeekInfoService().getStartOfWeek(aStartDate.getInTimezone(this.mTimezone))
+          this.mStartDate = getWeekInfoService().getStartOfWeek(aStartDate.getInTimezone(this.mTimezone));
           this.mEndDate = getWeekInfoService().getEndOfWeek(aEndDate.getInTimezone(this.mTimezone));
           this.refresh();
         ]]></body>
@@ -1222,14 +1222,12 @@
       <method name="deleteItemsFromCalendar">
         <parameter name="aCalendar"/>
         <body><![CDATA[
-          var deleteHash = {};
           for each (var box in this.mDateBoxes) {
             var boxItemData = box.box.mItemData.concat([]);
             for each (var itemData in boxItemData) {
               var item = itemData.item;
-              if (!deleteHash[item.hashId] && item.calendar.id == aCalendar.id) {
-                deleteHash[item.hashId] = true;
-                this.doDeleteItem(item);
+              if (item.calendar.id == aCalendar.id) {
+                box.box.deleteItem(item);
               }
             }
           }
@@ -1550,6 +1548,7 @@
         // the calIObserver, calICompositeObserver, calIAlarmServiceObserver
         ({
           calView: this,
+
           mBatchCount: 0,
 
           QueryInterface: function (aIID) {
@@ -1568,18 +1567,10 @@
           },
           onEndBatch: function() {
             this.mBatchCount--;
-            if (this.mBatchCount == 0) {
-              this.calView.refresh();
-            }
           },
           onLoad: function() {
-            this.calView.refresh();
           },
           onAddItem: function (aItem) {
-            if (this.mBatchCount) {
-                return;
-            }
-
             if (isToDo(aItem)) {
               if (!this.calView.mTasksInView) {
                 return;
@@ -1596,10 +1587,6 @@
               this.calView.doAddItem(occ);
           },
           onModifyItem: function (aNewItem, aOldItem) {
-            if (this.mBatchCount) {
-                return;
-            }
-
             if (isToDo(aNewItem) && isToDo(aOldItem) &&
                 !this.calView.mTasksInView) {
                 return;
@@ -1627,10 +1614,6 @@
               this.calView.doAddItem(occ);
           },
           onDeleteItem: function (aItem) {
-            if (this.mBatchCount) {
-                return;
-            }
-
             if (isToDo(aItem)) {
               if (!this.calView.mTasksInView) {
                 return;
@@ -1660,7 +1643,7 @@
                   case "readOnly":
                   case "disabled":
                       // XXXvv we can be smarter about how we handle this stuff
-                      this.calView.refresh();
+//                       this.calView.refresh();
                       break;
               }
           },
@@ -1728,7 +1711,7 @@
           var boxes = this.findBoxesForItem(aAlarmItem);
           for each (var box in boxes) {
             for each (var itemData in box.box.mItemData) {
-              if (itemData.item.hasSameIds(aAlarmItem)) {
+              if (itemData.item.hasSameIds(aAlarmItem) && itemData.box) {
                 if (aStop) {
                   itemData.box.removeAttribute("flashing");
                 } else {
